# Capital-CFD-Trading-Orchestrator

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  candles.py  daily_report.py  decision_agent.py  indicators.py  llm_news.py  market_data.py  news_macro.py  portfolio.py  social_sentiment.py  stubs.py  technical_analysis.py
app/: __init__.py  ai_director.py  audit.py  backtest.py  backtest_all.py  config.py  env.py  errors.py  fetch_candles.py  llm.py  logging_utils.py  main.py  modes.py  orchestrator.py  reporting.py  shadow.py
backtesting/: __init__.py  engine.py  paper_simulator.py
capital/: __init__.py  auth.py  client.py  mapper.py  models.py  transport.py  websocket.py
config/: broker.yaml  instruments.yaml  news.yaml  risk.yaml  strategy.yaml
dashboard/: __init__.py  hud.py
data/: __init__.py  csv_loader.py  csv_writer.py
docs/: ARCHITECTURE.md  CAPITAL_COM_INTEGRATION.md  CFD_TRADING_SPEC.md  PROJECT_SPEC.md  RISK_POLICY.md  STRATEGY_SPEC.md  USAGE.md
execution/: __init__.py  order_manager.py
monitoring/: __init__.py
risk/: __init__.py  engine.py  margin.py  models.py
tests/: test_audit.py  test_backtest_all_cli.py  test_backtest_engine.py  test_capital_auth.py  test_csv_writer.py  test_dashboard.py  test_decision_agent.py  test_dotenv.py  test_indicators.py  test_llm.py  test_margin_calculator.py  test_market_data.py  test_market_mapper.py  test_news_macro.py  test_orchestrator.py  test_order_manager.py  test_paper_simulator.py  test_portfolio.py  test_reporting.py  (+5 more)
(+1 files in other folders)
