[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capital-cfd-trading-orchestrator"
version = "0.1.0"
description = "Automated CFD trading orchestrator (backtest, shadow, Capital.com demo). Live trading disabled."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.8"]

[tool.setuptools.packages.find]
include = ["app*", "agents*", "capital*", "risk*", "execution*", "backtesting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
